--- a/2023-04.md
+++ b/2023-04.md
@@ -126,3 +126,6 @@
 > 总结：研究半天决定还是算了，普通消费者哪有精力做那么多区分呢，买大牌就行了
 * 对象打算买头盔，让我帮她选，然后我大致研究了一下，发现价格相近的情况下材质都差不多，区别无非就是造型、通风性、内衬还有佩戴的舒适度，最后一个比较主观，也很难在线上做出区别，那既然这样的话，买口碑还可以的大牌就行了，最后参考盖得排行，让对象挑了一个她觉得还可以的头盔，永恒DK1，99大洋
 * 对象过生日，去海底捞吃火锅，海底捞服务确实不错，服务员随叫随到，我们点的菜多了她还会建议我们取消一些菜，点锅底的时候建议点四宫格选两个清水锅，能感觉到是站在用户角度为用户服务的，而且他们的服务并没有过头，感觉恰到好处
+
+# 2023-04-26
+* 今日轻断食
