--- a/2023-05.md
+++ b/2023-05.md
@@ -6,3 +6,17 @@
 # 2023-05-04
 * 尝试在x86的机器上用qemu安装arm架构的虚拟机，尝试失败，在安装界面卡了4个多小时没动静
 * 看完《图解http》
+
+# 2023-05-05
+* 我发现自己现在做事总是三分钟热度，坚持不了几天就放弃了，就想去做其他事了，到最后一件事都没有完成，浪费了时间还没有任何收获
+> 我仔细想了一下，发现三分钟热度的根本原因是——那件想做的事没那么简单，而我又不想克服那个困难。所以导致我想做的事情总是坚持不下去，这件事情刚做一点，发现有困难了，然后就逃避，去做另外一件事情了。
+> 然后我就在想，是不是所有人都是这样？很多有经验的人士总是说，某件事你认真坚持干两年就能超过身边90%的人，你就能成为这个领域里的佼佼者，我想这些观点应该是对的，但是现实生活中很少有人能够对某件事认真坚持2年，因为那些对自己有提升的事情坚持做下去一定会遇到困难，而大多数人并不总是想去克服这个困难，所以导致现实生活中大多数人都是非常平庸的，那这是不是和人拉开差距的一个关键点，如果我坚持下去了，可能就真的能够超过身边90%的人了
+* 整理各种内容。翻看了一下自己在各个平台发布的内容，发现有很多非常有用的内容，但是我却不记得了，人的记性真的是差啊，以后要定期回顾自己发布的内容，为了方便回顾，所有有用的内容、笔记最好聚集到一个地方，以后就都放在语雀文档里吧，自己定期回顾
+
+# 2023-05-06
+* 公司运动会，因为没报项目，所以去运动会也是看人家比赛，没有多大意思，下次可以试着报一个简单的项目，有点参与感
+
+# 2023-05-07
+* 看了B站上的一些视频，觉得有些焦虑，好像做技术一直做下去，一直当一个工具人不是一个好的出路，因为工具人的可替代性太强，除非你的技术真的牛到不可替代，但其实一般的公司并不需要技术特别厉害的原员工，大多数都只是需要能干活的熟练工而已
+
+
