--- a/2023-05.md
+++ b/2023-05.md
@@ -19,4 +19,14 @@
 # 2023-05-07
 * 看了B站上的一些视频，觉得有些焦虑，好像做技术一直做下去，一直当一个工具人不是一个好的出路，因为工具人的可替代性太强，除非你的技术真的牛到不可替代，但其实一般的公司并不需要技术特别厉害的原员工，大多数都只是需要能干活的熟练工而已
 
+# 2023-05-08
+* 帮敏哥招人，加微信加的多了，确实对话术这一块有提升，聊的人多了，能形成一套固定的话术，而且发现求职者参差不齐，先不说技术怎么样，就礼貌这一块，有很多人就减分很多，让人不愿意跟他多聊
 
+# 2023-05-09
+* 帮敏哥招人，面试还是挺耗费时间的，秒一个人最少半个小时，到现在为止我已经帮敏哥招了10个人了，帮忙面了至少100个人了，也就是说花费了我50个小时，相当于6个工作日，但是这些都是我在非工作时间做的
+* 听了几节短视频带货的课程，发现有些人能做生意，确实不一般，因为跑通一个模式中间涉及的环节太多了，而且各个环节都需要动脑子，无脑的模仿别人肯定是做不成功的，当把自己放空，有了空杯心态后，再看自己以前看不上的东西，还是能学到很多的
+* 内容首先要吸引到人，比如课程的作者经常发的那些每个月赚好几万的案例，比如也谈钱公众号一开始计算收益说明投资的可行性和好处，再比如yst和各种课程开课前关于课程的介绍，大部分都是说学了这个课之后你就能怎么怎么样，其实到头来感觉跟那些卖老年药的电视广告似的，吃了这个药腰也不疼了，腿也不酸了，只是感觉这些比电视广告更加有真实感，更可信一点，但其实看完那些课程之后大部分是不能达到课程宣扬的那种效果的，这可能就是营销的力量吧，我得学习一下
+
+# 一、一切生意环节本质都是说服
+说服的本质：改变/调整对方的意图，让对方跟你合作。
+任何行业，都是由人构成的，那么只要是人，就一定不是完全理性，说服工作就是利用不理性、利用原始冲动、利用希望和恐惧达成的。
