--- a/2023-05.md
+++ b/2023-05.md
@@ -27,6 +27,5 @@
 * 听了几节短视频带货的课程，发现有些人能做生意，确实不一般，因为跑通一个模式中间涉及的环节太多了，而且各个环节都需要动脑子，无脑的模仿别人肯定是做不成功的，当把自己放空，有了空杯心态后，再看自己以前看不上的东西，还是能学到很多的
 * 内容首先要吸引到人，比如课程的作者经常发的那些每个月赚好几万的案例，比如也谈钱公众号一开始计算收益说明投资的可行性和好处，再比如yst和各种课程开课前关于课程的介绍，大部分都是说学了这个课之后你就能怎么怎么样，其实到头来感觉跟那些卖老年药的电视广告似的，吃了这个药腰也不疼了，腿也不酸了，只是感觉这些比电视广告更加有真实感，更可信一点，但其实看完那些课程之后大部分是不能达到课程宣扬的那种效果的，这可能就是营销的力量吧，我得学习一下
 
-# 一、一切生意环节本质都是说服
-说服的本质：改变/调整对方的意图，让对方跟你合作。
-任何行业，都是由人构成的，那么只要是人，就一定不是完全理性，说服工作就是利用不理性、利用原始冲动、利用希望和恐惧达成的。
+# 2023-05-10
+* 算是见识了有的业主有多傻逼了，完全没有素质，根本不讲道理，或者说她的智商根本理解不了正常做事的逻辑，一整个自私自利，真的很难理解，这种傻逼是怎么在社会上正常生存下来的，又转念一想，好像这种傻逼网上也很多，但是这种人照样能够在这个社会上生存，而且可能还活得很好，那我又比他们强到哪里了呢，我的收入远远高于他们了吗？我生活的圈子远离他们了吗？好像并没有，那么我就必须得忍受周围有这种傻逼的存在，希望自己能够提高自己的收入，提升自己的圈子，远离这些傻逼
