--- a/2023-05.md
+++ b/2023-05.md
@@ -29,3 +29,27 @@
 
 # 2023-05-10
 * 算是见识了有的业主有多傻逼了，完全没有素质，根本不讲道理，或者说她的智商根本理解不了正常做事的逻辑，一整个自私自利，真的很难理解，这种傻逼是怎么在社会上正常生存下来的，又转念一想，好像这种傻逼网上也很多，但是这种人照样能够在这个社会上生存，而且可能还活得很好，那我又比他们强到哪里了呢，我的收入远远高于他们了吗？我生活的圈子远离他们了吗？好像并没有，那么我就必须得忍受周围有这种傻逼的存在，希望自己能够提高自己的收入，提升自己的圈子，远离这些傻逼
+* 感觉日常写的越来越像日记了，变成写感想而不是记录自己做了什么事了，以后主要方向还是得如实记录自己做过的事，这样才能知道自己每天到底做了些什么，感想也可以写，但是是次要内容
+
+# 2023-05-11
+* 看李叫兽关于营销的文章
+* 构思自动复制软件如何实现
+
+# 2023-05-12
+* 自动复制软件初步实现。还是必须得理解清楚业务，业务理解清楚之前代码是写不出来的，其实程序员真正写代码的时间并不多，主要时间还是用在了对接业务功能和debug上
+* 又帮敏哥面了3个人，有个现象感觉很奇怪，按理说这两年大厂都在裁员，总共裁了也得有小10万人了吧，但是向敏哥公司这边投简历的人并不多，而且即便是有，水平也很一般，按理说不应该啊，现在应该是供过于求啊，为什么招人还很难
+
+# 2023-05-13
+* 完善自动复制软件
+
+# 2023-05-14
+* 完善自动复制软件
+
+# 2023-05-15
+* 上午去清华对接项目进度
+* 调试运维监控项目，实现一键关机功能
+
+# 2023-05-16
+* 上午帮敏哥面试3个cesium，有一个合适的
+* 下午和主任一起跟清华对接，明确了接下来要做的事情，任务还是挺重的
+* 完善运维监控项目的一键关机功能，增加时统监控页面
