--- a/2023-05.md
+++ b/2023-05.md
@@ -53,3 +53,16 @@
 * 上午帮敏哥面试3个cesium，有一个合适的
 * 下午和主任一起跟清华对接，明确了接下来要做的事情，任务还是挺重的
 * 完善运维监控项目的一键关机功能，增加时统监控页面
+
+# 2023-05-17
+* 上午看漏洞报告，提前准备解决办法，下次去用户那边解决
+* 精简运维监控项目后端代码
+
+# 2023-05-18
+* 精简运维监控项目后端代码
+
+# 2023-05-19
+* 完善safecopy部分代码
+
+# 2023-05-20
+* 周六休息一天
